sumo/tests/duarouter/errors/unknown_measure/errors.duarouter
Error: Unknown measure (weight attribute 'blub')!
Quitting (on error).
